--- a/helm/templates/broker-deployment.yaml
+++ b/helm/templates/broker-deployment.yaml
@@ -29,12 +29,22 @@ spec:
               name: {{ .name }}
             {{- end }}
           env:
+            - name: HOSTNAME_COMMAND
+              value: "echo $(POD_NAME).$(POD_NAMESPACE).svc.cluster.local"
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
             - name: KAFKA_BROKER_ID
               value: "{{ .Values.broker.config.brokerId }}"
             - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
               value: "PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,CONTROLLER:PLAINTEXT"
             - name: KAFKA_ADVERTISED_LISTENERS
-              value: "PLAINTEXT://{{ .Release.Name }}-gpsd-kafka-broker.{{ .Values.namespace }}.svc.cluster.local:29092,PLAINTEXT_HOST://{{ .Release.Name }}-gpsd-kafka-broker.{{ .Values.namespace }}.svc.cluster.local:9092"
+              value: "PLAINTEXT://$(POD_NAME).$(POD_NAMESPACE).svc.cluster.local:29092,PLAINTEXT_HOST://$(POD_NAME).$(POD_NAMESPACE).svc.cluster.local:9092"
             - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
               value: "{{ .Values.broker.config.replicationFactor }}"
             - name: KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS
@@ -48,7 +58,7 @@ spec:
             - name: KAFKA_NODE_ID
               value: "{{ .Values.broker.config.nodeId }}"
             - name: KAFKA_CONTROLLER_QUORUM_VOTERS
-              value: "{{ .Values.broker.config.nodeId }}@{{ .Release.Name }}-gpsd-kafka-broker.{{ .Values.namespace }}.svc.cluster.local:29093"
+              value: "{{ .Values.broker.config.nodeId }}@$(POD_NAME).$(POD_NAMESPACE).svc.cluster.local:29093"
             - name: KAFKA_LISTENERS
               value: "PLAINTEXT://0.0.0.0:29092,CONTROLLER://0.0.0.0:29093,PLAINTEXT_HOST://0.0.0.0:9092"
             - name: KAFKA_INTER_BROKER_LISTENER_NAME
